[package]
name = "custom_error_core"
description = "Define custom errors without boilerplate using the custom_error! macro (a version of custom_error for no-std environments)."
version = "1.8.0"
authors = ["lovasoa"]
license = "BSD-2-Clause"
homepage = "https://github.com/lovasoa/custom_error"
repository = "https://github.com/gz/custom_error"
readme = "README.md"
categories = ["rust-patterns", "development-tools", "encoding"]
keywords = ["error", "failure", "macro"]
documentation = "https://docs.rs/custom_error"
edition='2018'

[dependencies]

[badges]